<resources>
    <string name="app_name">Meu Beats</string>
    <string name="especializados_em_fones_para_deejay">Especializados em fones para DJ\'s</string>
    <string name="user">Usuário</string>
    <string name="password">Senha</string>
    <string name="login">Entrar</string>
    <string name="not_registered">Ainda não é cadastrado?</string>
    <string name="register"><u>Inscreva-se</u></string>
    <string name="login_bg_img_description">Foto de fundo. Mulher com phone de ouvido</string>
    <string name="search">Pesquisar</string>
    <string name="add">Adicionar</string>
    <string name="question_mark">\?</string>
    <string name="headphone_descriptor">Fone de ouvido</string>
    <string name="more_info">Mais Informações</string>
    <string name="phone_image_descriptor">Image do fone de ouvido</string>
    <string name="empty_list_text">Não há modelos a serem visualizados</string>
    <string name="connection">Conexão</string>
    <string name="compatibility">Compatibilidade</string>
    <string name="charge">Alimentação</string>
    <string name="autonomy">Autonomia</string>
    <string name="height">Altura</string>
    <string name="capture">Captura</string>
    <string name="buy">Comprar</string>
    <string name="formatted_review">%d Reviews</string>

    <!-- errors -->
    <string name="network_connection_error">Por favor, verifique sua conexão com a internet.</string>
</resources>