<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.ProductListFragment">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/product_gradient"
        app:layout_constraintBottom_toTopOf="@id/rv_products" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/dark_gradient"
        app:layout_constraintBottom_toTopOf="@id/rv_products"
        app:layout_constraintTop_toBottomOf="@id/iv_headphone" />

    <View
        android:id="@+id/headphone_shadow"
        android:layout_width="0dp"
        android:layout_height="@dimen/headphone_shadow_height"
        android:background="@drawable/headphone_shadow"
        app:layout_constraintBottom_toTopOf="@id/btn_add"
        app:layout_constraintEnd_toEndOf="@id/iv_headphone"
        app:layout_constraintStart_toStartOf="@id/iv_headphone"
        app:layout_constraintTop_toBottomOf="@id/iv_headphone" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_product_list"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ActionBarTheme"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />

    <ImageView
        android:id="@+id/iv_headphone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/headphone_descriptor"
        android:src="@drawable/headphone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tb_product_list" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/rounded_button_height"
        android:layout_marginTop="@dimen/layout_spacing_larger"
        android:background="@drawable/rounded_button"
        android:paddingHorizontal="@dimen/layout_spacing_largest"
        android:text="@string/add"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headphone_shadow" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_spacing_normal"
        android:contentDescription="@string/more_info"
        android:src="@drawable/ic_question_mark"
        android:text="@string/question_mark"
        app:backgroundTint="@color/purple_500"
        app:layout_constraintBottom_toBottomOf="@id/btn_add"
        app:layout_constraintStart_toEndOf="@id/btn_add"
        app:layout_constraintTop_toTopOf="@id/btn_add"
        app:rippleColor="@color/purple_300" />

    <ProgressBar
        android:id="@+id/spinner_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_add" />

    <TextView
        android:id="@+id/tv_empty_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/layout_spacing_normal"
        android:text="@string/empty_list_text"
        android:textAlignment="center"
        android:textColor="@color/purple_700"
        android:textSize="@dimen/empty_list_text_size"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_add" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_products"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/layout_spacing_larger"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_add"
        tools:itemCount="5"
        tools:listitem="@layout/product_list_item" />

</androidx.constraintlayout.widget.ConstraintLayout>