<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".presentation.ui.ProductDetailsFragment">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/product_gradient"
        app:layout_constraintBottom_toTopOf="@id/scroll_view" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/dark_gradient"
        app:layout_constraintBottom_toTopOf="@id/scroll_view"
        app:layout_constraintTop_toBottomOf="@id/iv_headphone" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_product_details"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ActionBarTheme"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />

    <ImageView
        android:id="@+id/iv_headphone"
        android:layout_width="0dp"
        android:layout_height="@dimen/headphone_image_height"
        android:layout_marginHorizontal="@dimen/headphone_image_margin_horizontal"
        android:contentDescription="@string/headphone_descriptor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tb_product_details"
        tools:src="@drawable/headphone" />

    <View
        android:id="@+id/headphone_shadow"
        android:layout_width="0dp"
        android:layout_height="@dimen/headphone_shadow_height"
        android:layout_marginHorizontal="@dimen/headphone_shadow_margin_horizontal"
        android:background="@drawable/headphone_shadow"
        app:layout_constraintEnd_toEndOf="@id/iv_headphone"
        app:layout_constraintStart_toStartOf="@id/iv_headphone"
        app:layout_constraintTop_toBottomOf="@id/iv_headphone" />

    <TextView
        android:id="@+id/tv_model_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_spacing_double"
        android:textSize="@dimen/model_name_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headphone_shadow"
        tools:text="Modelo 01" />

    <View
        android:id="@+id/horizontal_line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/hr_height"
        android:layout_marginHorizontal="@dimen/layout_spacing_normal"
        android:layout_marginTop="@dimen/layout_spacing_normal"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/tv_model_name" />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/black"
        android:padding="@dimen/layout_spacing_normal"
        app:layout_constraintBottom_toTopOf="@id/btn_buy"
        app:layout_constraintTop_toBottomOf="@id/horizontal_line">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <TextView
                android:id="@+id/tv_connection_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/layout_spacing_half"
                android:text="@string/connection"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/guide_center"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_compatibility_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_spacing_normal"
                android:layout_marginEnd="@dimen/layout_spacing_half"
                android:text="@string/compatibility"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/guide_center"
                app:layout_constraintTop_toBottomOf="@id/tv_connection_display" />

            <TextView
                android:id="@+id/tv_charging_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_spacing_normal"
                android:layout_marginEnd="@dimen/layout_spacing_half"
                android:text="@string/charge"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/guide_center"
                app:layout_constraintTop_toBottomOf="@id/tv_compatibility_display" />

            <TextView
                android:id="@+id/tv_autonomy_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_spacing_normal"
                android:layout_marginEnd="@dimen/layout_spacing_half"
                android:text="@string/autonomy"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/guide_center"
                app:layout_constraintTop_toBottomOf="@id/tv_charging_display" />

            <TextView
                android:id="@+id/tv_height_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_spacing_normal"
                android:layout_marginEnd="@dimen/layout_spacing_half"
                android:text="@string/height"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/guide_center"
                app:layout_constraintTop_toBottomOf="@id/tv_autonomy_display" />

            <TextView
                android:id="@+id/tv_capture_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_spacing_normal"
                android:layout_marginEnd="@dimen/layout_spacing_half"
                android:text="@string/capture"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/guide_center"
                app:layout_constraintTop_toBottomOf="@id/tv_height_display" />

            <TextView
                android:id="@+id/tv_connection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_spacing_half"
                app:layout_constraintStart_toEndOf="@id/guide_center"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Bluetooth" />

            <TextView
                android:id="@+id/tv_compatibility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_spacing_half"
                android:layout_marginTop="@dimen/layout_spacing_normal"
                app:layout_constraintStart_toEndOf="@id/guide_center"
                app:layout_constraintTop_toBottomOf="@id/tv_connection"
                tools:text="Bluetooth 4.1" />

            <TextView
                android:id="@+id/tv_charging"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_spacing_half"
                android:layout_marginTop="@dimen/layout_spacing_normal"
                app:layout_constraintStart_toEndOf="@id/guide_center"
                app:layout_constraintTop_toBottomOf="@id/tv_compatibility"
                tools:text="Bateria" />

            <TextView
                android:id="@+id/tv_autonomy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_spacing_half"
                android:layout_marginTop="@dimen/layout_spacing_normal"
                app:layout_constraintStart_toEndOf="@id/guide_center"
                app:layout_constraintTop_toBottomOf="@id/tv_charging"
                tools:text="16 horas" />

            <TextView
                android:id="@+id/tv_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_spacing_half"
                android:layout_marginTop="@dimen/layout_spacing_normal"
                app:layout_constraintStart_toEndOf="@id/guide_center"
                app:layout_constraintTop_toBottomOf="@id/tv_autonomy"
                tools:text="18.4 cm" />

            <TextView
                android:id="@+id/tv_capture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_spacing_half"
                android:layout_marginTop="@dimen/layout_spacing_normal"
                app:layout_constraintStart_toEndOf="@id/guide_center"
                app:layout_constraintTop_toBottomOf="@id/tv_height"
                tools:text="Semi ativa" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_buy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/layout_spacing_normal"
        android:layout_marginTop="@dimen/layout_spacing_normal"
        android:layout_marginBottom="@dimen/layout_spacing_normal"
        android:background="@drawable/rounded_button"
        android:text="@string/buy"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>